kubernetes/unifi/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unpoller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: unpoller
  ingress:
  - fromEndpoints:
    - matchLabels:
        prometheus: k8s
        io.kubernetes.pod.namespace: monitoring
  egress:
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
